--- a/day4_opt/index.html
+++ b/day4_opt/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <title>CSS Units Vh, VW, VMin, Vmax</title>
 </head>
@@ -15,12 +17,16 @@
                 <a href="" class="btn">Buy Now!</a>
             </div>
             <div class="col">
-                <img src="//unsplash.it/300/400" alt="" class="hero-img">
+                <img src="img/girl.jpg" alt="" class="hero-img"/>
+
             </div>
         </div>
     </div>
     <div class="more-content">
-        
+        <img src="img/girl_beach.jpg" alt="beach_stroll">
+        <footer>
+            <p class="font-italic text-center">All rights Reserved - JQK</p>
+         </footer>
     </div>
 </body>
 </html>
