--- a/day6/index.html
+++ b/day6/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Rems and Not Ems</title>
 </head>
 <body>
-    <div class="content">
+    <div class="content p-2 m-3">
         <h1 class="title"> Why Ems Can be dangerous</h1>
     </header>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, iste exercitationem. Consectetur cumque dolore sint facilis maxime, doloribus quisquam beatae fuga? Hic tenetur iusto illum ex magni possimus eum ea. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ipsam, excepturi, cumque corrupti dignissimos beatae perspiciatis modi neque eaque, odit molestias molestiae optio totam maiores recusandae tenetur nihil porro alias!</p>
@@ -20,8 +21,12 @@
             <li>voluptatibus suscipit quaerat quibusdam quidem voluptate.</li>>
             <li>Repudiandae, reiciendis.</li>
         </ul>
-        <br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur saepe quam aperiam quis soluta, eius provident facilis nesciunt placeat aspernatur? Culpa cum sunt odit id maxime, perferendis rem cumque laudantium?</p>
+    </div>
+    <div class="cta p-2 m-3">
+        <h2 class="cta_title">Buy Our Product</h2>
+        <p class="cta_body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quibusdam ullam aut autem temporibus molestias. Architecto dolore, ipsum quo iure in aliquid pariatur! Cum, voluptatum temporibus qui tempora neque quae!</p>
+        <p><a href="" class="cta_btn mx-auto">Buy Now</a> </p>
     </div>
 </body>
 </html>
