--- a/day_5/index.html
+++ b/day_5/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>Day % Challenge</title>
 </head>
 <body>
     <div class="dark-blue">
-        <h1 class="h1">Responsive Layouts Don't Have to Be a Struggle</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero temporibus labore aspernatur praesentium quam sunt rem accusantium laborum, ipsa placeat voluptate distinctio consequuntur repudiandae facere natus in? Ipsum, quae illum? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta deleniti voluptates, pariatur, omnis tempore beatae inventore cum, eaque nihil veritatis odit laborum voluptate ab nostrum eos necessitatibus aspernatur excepturi quis.</p>
+        <div class='container'>
+            <div class="her__text">
+                <h1 class="h1">Responsive Layouts Don't Have to Be a Struggle</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero temporibus labore aspernatur praesentium quam sunt rem accusantium laborum, ipsa placeat voluptate distinctio consequuntur repudiandae facere natus in? Ipsum, quae illum? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta deleniti voluptates, pariatur, omnis tempore beatae inventore cum, eaque nihil veritatis odit laborum voluptate ab nostrum eos necessitatibus aspernatur excepturi quis.</p>
 
-        <a href="/to_learn" class="button">I WANT TO LEARN</a>
+                <a href="/to_learn" class="button">I WANT TO LEARN</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
