--- a/day_8/index.html
+++ b/day_8/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="dark-blue">
-        <div class='container p-5'>
+        <div class='container1 p-5'>
             <div class="her__text">
                 <h1 class="p-2">Responsive Layouts Don't Have to Be a Struggle</h1>
                 <p class="m-2 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero temporibus labore aspernatur praesentium quam sunt rem accusantium laborum, ipsa placeat voluptate distinctio consequuntur repudiandae facere natus in? Ipsum, quae illum? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta deleniti voluptates, pariatur, omnis tempore beatae inventore cum, eaque nihil veritatis odit laborum voluptate ab nostrum eos necessitatibus aspernatur excepturi quis.</p>
@@ -19,21 +19,28 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container2">
         <div class="row">
             <div class="col">
-                <h2>Cheap</h2>
+                <h2 class="text-center">Cheap</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, mollitia. Distinctio, sit laudantium totam excepturi perferendis fugit officiis temporibus impedit pariatur, rem nam blanditiis odit ut voluptate id veritatis quibusdam.</p>
             </div>
             <div class="col">
-                <h2>Quick</h2>
+                <h2 class="text-center">Quick</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt non praesentium nam rerum numquam iusto enim, dolor, molestias odit esse maiores alias iure. Accusamus quae, tenetur architecto dolores quam sed?</p>
             </div>
             <div class="col">
-                <h2>Affordable</h2>
+                <h2 class="text-center">Affordable</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, recusandae neque quibusdam quisquam id rem molestiae doloremque exercitationem quam. Nulla temporibus recusandae officiis dolor reiciendis adipisci ab veritatis repellendus possimus.</p>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col"></div>
+                <h2>here</h2>
+                <p></p>
+            </div>
+    </div>
     </div>
 </body>
 </html>
