--- a/day_9/index.html
+++ b/day_9/index.html
@@ -11,6 +11,18 @@
 </head>
 <body>
     <header>
+        <nav class="nav">
+            <ul class="nav_list">
+                <li class="nav_item"> <a href="#" class="nav_button">Home</a></li>
+                <li class="nav_item"><a href="#" class="nav_button">About</a></li>
+                <li class="nav_item"><a href="#" class="nav_button">Contact</a></li>
+                <li class="nav_item"><a href="#"class="nav_button">SignIn</a></li>
+                <li class="nav_item_butt"> <a href="#" class="nav_butt">SignUp</a></li>
+                
+            </ul>
+        </nav>
+    </header>
+
         <div class="hero">
             <div class="container">
                 <div class="hero__text">
@@ -21,7 +33,6 @@
                 </div>
                 <img src="imgs/rocket_man.jpg" alt="sketches" class="img">
             </div>
-    </header>
     <main class="main container row">
             <section class="primary_content">
                 <h2 class="sec_title">Quality designs made custom, on demnad just for you</h2>
