--- a/day_9/index.html
+++ b/day_9/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <div class="container">
         <nav class="nav">
             <ul class="nav_list">
                 <li class="nav_item"> <a href="#" class="nav_button">Home</a></li>
@@ -18,9 +19,9 @@
                 <li class="nav_item"><a href="#" class="nav_button">Contact</a></li>
                 <li class="nav_item"><a href="#"class="nav_button">SignIn</a></li>
                 <li class="nav_item_butt"> <a href="#" class="nav_butt">SignUp</a></li>
-                
             </ul>
-        </nav>
+            </nav>
+        </div>
     </header>
 
         <div class="hero">
@@ -31,7 +32,7 @@
                     <a href="#" class="btn">I want to learn</a>
                 </div>
                 </div>
-                <img src="imgs/rocket_man.jpg" alt="sketches" class="img">
+                <img src="imgs/rocket_man.jpg" alt="sketches" class="img mx-right">
             </div>
     <main class="main container row">
             <section class="primary_content">
