--- a/day_11/index.html
+++ b/day_11/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <a href="#">
-                <img src="imgs/logo.jpg" alt="">
+                <img src="img/logo.jpg" alt="">
             </a>
         <nav class="nav">
             <ul class="nav_list">
