--- a/day_11/index.html
+++ b/day_11/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container row">
             <a href="#">
-                <img src="img/logo.jpg" alt="">
+                <img src="imgs/dog.png" class="dog" alt="doggo">
             </a>
         <nav class="nav">
             <ul class="nav_list">
@@ -21,7 +21,7 @@
                 <li class="nav_item"><a href="#" class="nav_button">About</a></li>
                 <li class="nav_item"><a href="#" class="nav_button">Contact</a></li>
             </ul>
-            <ul class="nav_list2">
+            <ul class="nav_list">
                 <li class="nav_item"><a href="#"class="nav_button ">SignIn</a></li>
                 <li class="nav_item_butt"> <a href="#" class="nav_butt">SignUp</a></li>
             </ul>
