--- a/day_11/index.html
+++ b/day_11/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div class="container row">
+        <nav class="nav">
             <a href="#">
                 <img src="imgs/dog.png" class="dog" alt="doggo">
             </a>
-        <nav class="nav">
-            <ul class="nav_list">
+            <ul class="nav_list nav_list--primary">
                 <li class="nav_item"> <a href="#" class="nav_button">Home</a></li>
                 <li class="nav_item"><a href="#" class="nav_button">About</a></li>
                 <li class="nav_item"><a href="#" class="nav_button">Contact</a></li>
