--- a/bonus/index.html
+++ b/bonus/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Bonus map(), max(), min() clamp</title>
 </head>
 <body>
-    
+    <nav class="content">
+        <h2 class="title">A catchy Title here</h2>
+        <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga sed, odio quis vel iusto quidem accusantium eius perferendis! Consectetur repudiandae saepe itaque temporibus accusamus ipsam nostrum, dolores laboriosam recusandae odit!</p>
+    </nav>
 </body>
 </html>
