--- a/Day_12_Big/index.html
+++ b/Day_12_Big/index.html
@@ -9,24 +9,24 @@
     <title>Big challenge</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h3 class="head3 text-center">Lorem ipsum dolor </h3>
-            <h2>Responsive Layouts don't have   to be a Struggle</h1>
+    <div class="intro">
+
+            <p class="intro_text">Lorem Ipsum Sit</p>
+            <h2 class="intro_title">Responsive Layouts don't have   to be a Struggle</h1>
         </header>
-        <div class="first">
-            <h2 class="firsth2 font-weight-bolder text-center">Quality Design</h2>
+        <div class="section-two">
+            <h2 class="section_title font-weight-bolder text-center">Quality Design</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique reiciendis aliquid nemo molestiae accusamus iure doloremque sit delectus eius odio, sunt veniam non impedit quaerat temporibus sapiente? Placeat, dolore inventore?</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At est in neque, odit voluptate debitis, inventore quaerat, laboriosam eius hic commodi! Molestias repudiandae impedit perferendis error mollitia inventore! Iste, ad?
             </p>
         </div>
-        <div class="second">
+        <div class="section-three">
             <h2 class="secondh2">Made Custom For You</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis beatae inventore corrupti in necessitatibus quis voluptatum saepe, a, excepturi, expedita dolores laboriosam minima! Quod fuga ea autem. Voluptatem, sit vero?
             </p>
             <img src="img/image-01.jpg" alt="sunset">
         </div>
-        <div class="third">
+        <div class="section-four">
             <img src="img/image-02.jpg" alt="">
             <h2 class="thirdh2 font-weight-bolder text-center">Created With Care</h2>
             <p>felis donec et odio Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, suscipit dolores officiis, perspiciatis ipsum quo dolore eos modi eum necessitatibus ab inventore architecto atque enim? Veniam quis dicta officiis voluptas!</p>
