--- a/day_18/index.html
+++ b/day_18/index.html
@@ -10,8 +10,8 @@
 <body>
     <section class="intro">
         <div class="container">
-            <p class="intro_text"></p>
-            <h1 class="intro_title"></h1>
+            <p class="intro_text">LOREM IPSUM BRUT</p>
+            <h1 class="intro_title">Responsive layouts don't have to be a struggle</h1>
         </div>
     </section>
     <section class="section_two">
@@ -43,11 +43,12 @@
 
     <section class="section_four">
         <div class="container_row">
+            <h2 class="section_title">Created With Care</h2>
             <div class="col">
                 <img src="img/img-02.jpg" alt="sunset_mountain_range">
             </div>
             <div class="col">
-                <h2 class="section_title">Created With Care</h2>
+
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus inventore nobis cum! Repellat cumque perferendis quo! Qui, delectus, autem sapiente quos sed perspiciatis, quaerat nemo harum possimus voluptatum aliquid distinctio?</p>
             </div>
         </div>
