--- a/day_18/index.html
+++ b/day_18/index.html
@@ -5,50 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Roboto:wght@100;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
     <title>Big Challenge</title>
 </head>
 <body>
     <section class="intro">
-        <div class="container">
+        <div class="container1">
             <p class="intro_text">LOREM IPSUM BRUT</p>
-            <h1 class="intro_title">Responsive layouts don't have to be a struggle</h1>
+            <h1 class="intro_title">Responsive layouts <br>don't have to be a struggle</h1>
+        </div>
+        <div class="img_cen">
+            <img src="img/nat.jpg" alt="snapper" class="mx_auto p-2 m-4">
         </div>
     </section>
     <section class="section_two">
+        <h2 class="section-title--dark text-center p-2">Quality Designs</h2>
         <div class="container">
-            <h2 class="section-title--dark">Quality Designs</h2>
             <div class="row">
-                <div class="col">
+                <div class="col p-3 m-2">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni iste, odit voluptatem nisi sint facere nihil sapiente molestias tenetur tempora repellat non incidunt aspernatur assumenda quis blanditiis corporis, nesciunt aperiam!</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col p-3 m-2">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem rem tenetur exercitationem sint amet at, iusto recusandae dolor eos provident aperiam, repudiandae fuga vero explicabo corporis ipsum quisquam reprehenderit libero.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section_three">
-        <div class="container_row">
+    <section class="section_three p-5">
+        <div class="container row">
             <div class="col">
                 <h2 class="section_title">Made Custom For you</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis odit, optio ea veniam exercitationem deleniti qui eos voluptates culpa rerum ipsa consequatur ducimus quibusdam error quae repudiandae maiores quam perferendis.</p>
             </div>
             <div class="col">
-                <img src="img/img-01.jpg" alt="sunset">
+                <img src="img/image-01.jpg" alt="sunset">
             </div>
         </div>
     </section>
 
-    <section class="section_four">
-        <div class="container_row">
-            <h2 class="section_title">Created With Care</h2>
+    <section class="section_four p-5">
+        <div class="container row">
             <div class="col">
-                <img src="img/img-02.jpg" alt="sunset_mountain_range">
+                <img src="img/image-02.jpg" alt="sunset_mountain_range">
             </div>
             <div class="col">
-
+                <h2 class="section_title">Created With Care</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus inventore nobis cum! Repellat cumque perferendis quo! Qui, delectus, autem sapiente quos sed perspiciatis, quaerat nemo harum possimus voluptatum aliquid distinctio?</p>
             </div>
         </div>
