--- a/day_19/index.html
+++ b/day_19/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container row">
-            <button class="nav--toggle">
+            <button class="nav-toggle">
                 <span class="hamburger"></span>
             </button>
         <nav class="nav">
